finally able to change credits + add newly produced video pages

--- a/app/views/home/bok-2019.html.erb
+++ b/app/views/home/bok-2019.html.erb
@@ -4,19 +4,10 @@
   </div>
   <div class="container">
     <div class="credits">
-      <p>CLIENT: ONWIES KNALLEN BMX</p>
-      <p>PRODUCTION COMPANY: SYBREN PLANTING</p>
+      <p>CAMERA OPERATORS: SYBREN PLANTING, STEIJN LEIJZER</p>
       <br>
-      <p>DIRECTOR: SYBREN PLANTING</p>
-      <p>EXECUTIVE PRODUCER: SYBREN PLANTING</p>
-      <p>PRODUCER: ROCHÉ WONG</p>
-      <p>DIRECTOR OF PHOTOGRAPHY: ZEEGER VERSCHUREN</p>
-      <p>CPT LINE PRODUCTION: HACIENDA FILMS</p>
-      <p>CPT LINE PRODUCER: JESSICA SCHIPPERS</p>
-      <p>POST PRODUCTION: THE COMPOUND</p>
-      <p>EDITOR: JOSHUA MENCO</p>
-      <p>MUSIC & SOUNDDESIGN: SOUNDSRIGHT</p>
-      <p>GRADING: RUBEN LABREE</p>
+      <p>POST PRODUCTION: SYBREN PLANTING</p>
+
     </div>
   </div>
 </div>
