--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -13,11 +13,11 @@
         <%# Contact Section (select txt wish to edit and edit -ONLY WHITE TEXT) %>
       <div class="col-6 contactText">
         <div class="textBox">
-          <h5>Sybren Planting</h5>
-          <h5>RIBESSTRAAT 69H</h5>
-          <h5>1032 JS, AMSTERDAM</h5>
-          <h5>+3169696966</h5>
+          <h5>SYBREN PLANTING</h5>
+          <h5>+31639061916</h5>
           <h5>info@sybrenplanting.com</h5>
+          <br>
+          <h5>KVK: 68911351 | BTW: NL002327979B68</h5>
         </div>
       </div>
     </div>
