--- a/app/views/home/glennc-giving-back.html.erb
+++ b/app/views/home/glennc-giving-back.html.erb
@@ -4,20 +4,15 @@
   </div>
   <div class="container">
     <div class="credits">
-      <p>CLIENT: GLENN COLDENHOFF</p>
-      <p>AGENCY: FOX</p>
-      <p>PRODUCTION COMPANY: VIGICS</p>
+      <p>CLIENT: MONSTER ENERGY</p>
+      <p>DIRECTOR: SYBREN PLANTING, STEIJN LEIJZER</p>
       <br>
-      <p>DIRECTOR: SYBREN PLANTING</p>
-      <p>EXECUTIVE PRODUCER: DWIGHT GROOT</p>
-      <p>PRODUCER: ROCHÉ WONG</p>
-      <p>DIRECTOR OF PHOTOGRAPHY: ZEEGER VERSCHUREN</p>
-      <p>CPT LINE PRODUCTION: HACIENDA FILMS</p>
-      <p>CPT LINE PRODUCER: JESSICA SCHIPPERS</p>
-      <p>POST PRODUCTION: THE COMPOUND</p>
-      <p>EDITOR: JOSHUA MENCO</p>
-      <p>MUSIC & SOUNDDESIGN: SOUNDSRIGHT</p>
-      <p>GRADING: RUBEN LABREE</p>
+      <p>CAMERA OPERATORS: SYBREN PLANTING, STEIJN LEIJZER</p>
+      <p>ADDITIONAL CAMERA OPERATORS: JOEK TEMPELAARS, CAS VELTHUIS</p>
+      <p>SOUND RECORDING: JASON DEGRAW, ROBIN KALSBEEK, PAUL VERHALLEN, MAX OOSTVEEN</p>
+      <p>EDITOR: CAS VELTHUIS</p>
+      <p>SOUND MIX: HACIENDA FILMS</p>
+      <p>GRADING: GIOVANNI DE DEUGD</p>
     </div>
   </div>
 </div>
