--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,6 +7,18 @@
   </div>
 
   <div class="tiles">
+    <%= link_to teamtrobbies_path do %>
+      <%= image_tag "team-trobbies.png", class: "imgTile", title: "team-trobbies" %>
+    <% end %>
+  </div>
+
+  <div class="tiles">
+    <%= link_to madnes_path do %>
+      <%= image_tag "madnes.png", class: "imgTile", title: "madnes" %>
+    <% end %>
+  </div>
+
+  <div class="tiles">
     <%= link_to glennc_path do %>
       <%= image_tag "glennc.png", class: "imgTile", title: "Glenn Coldenhoff - Giving Back" %>
     <% end %>
@@ -45,6 +57,12 @@
   <div class="tiles">
     <%= link_to nalu_path do %>
       <%= image_tag "nalu.png", class: "imgTile", title: "Nalu - Lost Frequenties BTS" %>
+    <% end %>
+  </div>
+
+  <div class="tiles">
+    <%= link_to pumpfactory_path do %>
+      <%= image_tag "pumpfactory.png", class: "imgTile", title: "pump-factory" %>
     <% end %>
   </div>
 
