--- a/app/views/home/opdruq.html.erb
+++ b/app/views/home/opdruq.html.erb
@@ -5,19 +5,10 @@
   <div class="container">
     <div class="credits">
       <p>CLIENT: OPDRUQ</p>
-      <p>AGENCY: DAWN</p>
-      <p>PRODUCTION COMPANY: YCCINC</p>
       <br>
       <p>DIRECTOR: SYBREN PLANTING</p>
-      <p>EXECUTIVE PRODUCER: DWIGHT GROOT</p>
-      <p>PRODUCER: ROCHÉ WONG</p>
-      <p>DIRECTOR OF PHOTOGRAPHY: ZEEGER VERSCHUREN</p>
-      <p>CPT LINE PRODUCTION: HACIENDA FILMS</p>
-      <p>CPT LINE PRODUCER: JESSICA SCHIPPERS</p>
-      <p>POST PRODUCTION: THE COMPOUND</p>
-      <p>EDITOR: JOSHUA MENCO</p>
-      <p>MUSIC & SOUNDDESIGN: SOUNDSRIGHT</p>
-      <p>GRADING: RUBEN LABREE</p>
+      <p>CAMERA OPERATOR: SYBREN PLANTING</p>
+      <p>POST PRODUCTION: SYBREN PLANTING</p>
     </div>
   </div>
 </div>
