--- a/app/views/home/tomvdb-monster-energy.html.erb
+++ b/app/views/home/tomvdb-monster-energy.html.erb
@@ -4,20 +4,12 @@
   </div>
   <div class="container">
     <div class="credits">
-      <p>CLIENT: TOM VAN DEN BOGAARD</p>
-      <p>AGENCY: MONSTER ENERGY</p>
-      <p>PRODUCTION COMPANY: VIGICS</p>
+      <p>DIRECTOR: STEIJN LEIJZER</p>
+      <p>CAMERA OPERATORS: STEIJN LEIJZER, SYBREN PLANTING</p>
       <br>
-      <p>DIRECTOR: SYBREN PLANTING</p>
-      <p>EXECUTIVE PRODUCER: DWIGHT GROOT</p>
-      <p>PRODUCER: ROCHÉ WONG</p>
-      <p>DIRECTOR OF PHOTOGRAPHY: ZEEGER VERSCHUREN</p>
-      <p>CPT LINE PRODUCTION: HACIENDA FILMS</p>
-      <p>CPT LINE PRODUCER: JESSICA SCHIPPERS</p>
-      <p>POST PRODUCTION: THE COMPOUND</p>
-      <p>EDITOR: JOSHUA MENCO</p>
-      <p>MUSIC & SOUNDDESIGN: SOUNDSRIGHT</p>
-      <p>GRADING: RUBEN LABREE</p>
+      <p>GAFFER: WIEGERT DE VRIES</p>
+      <p>POST PRODUCTION: STEIJN LEIJZER</p>
+      <p>TALENT: TOM VAN DEN BOGAARD</p>
     </div>
   </div>
 </div>
