--- a/app/views/home/tomvdb-redemption.html.erb
+++ b/app/views/home/tomvdb-redemption.html.erb
@@ -4,20 +4,39 @@
   </div>
   <div class="container">
     <div class="credits">
-      <p>CLIENT: TOM VAN DEN BOGAARD</p>
-      <p>AGENCY: MONSTER ENERGY</p>
+      <p>CLIENT: MONSTER ENERGY, MONSTER ENERGY BENELUX: ROY VAN KEMPEN, ELIN BLANKE</p>
+      <p>TALENT: TOM VAN DEN BOGAARD</p>
       <p>PRODUCTION COMPANY: SYBREN PLANTING</p>
       <br>
-      <p>DIRECTOR: SYBREN PLANTING</p>
-      <p>EXECUTIVE PRODUCER: DWIGHT GROOT</p>
-      <p>PRODUCER: ROCHÉ WONG</p>
-      <p>DIRECTOR OF PHOTOGRAPHY: ZEEGER VERSCHUREN</p>
-      <p>CPT LINE PRODUCTION: HACIENDA FILMS</p>
-      <p>CPT LINE PRODUCER: JESSICA SCHIPPERS</p>
-      <p>POST PRODUCTION: THE COMPOUND</p>
-      <p>EDITOR: JOSHUA MENCO</p>
-      <p>MUSIC & SOUNDDESIGN: SOUNDSRIGHT</p>
-      <p>GRADING: RUBEN LABREE</p>
+      <p>DIRECTOR: SYBREN PLANTING, STEIJN LEIJZER</p>
+      <p>CAMERA: SYBREN PLANTING, STEIJN LEIJZER</p>
+      <p>EDIT: SYBREN PLANTING, STEIJN LEIJZER</p>
+      <br>
+      <p>ADDITIONAL CAMERA: ROBIN RUITENBERG</p>
+      <p>FPV DRONE: RALPH HOGENBIRK</p>
+      <p>PHOTOGRAPHY: SYO VAN VLIET, BART DE JONG</p>
+      <p>SOUND MIX & DESIGN: JASON DEGRAW</p>
+      <p>TITLE DESIGN: NICKY VAN DER VEEN</p>
+      <p>GRADING: @i_am_nikolaii</p>
+      <p>MUSIC: JESPFUR, MOON</p>
+      <br>
+      <p>RAMP DESIGN: PIM VAN DEN BOS</p>
+      <p>RAMP BUILDERS: MAX CLEUREN, FRITS VAN DER LINDEN, DENNIS 'PAAP' JANSSEN, STEVEN GÖRTEMÖLLER</p>
+      <br>
+      <p>SPECIAL THANKS: TOMS FAMILY, ARJAN ELLENS, PAUL DE JONG, SEM KOK, PIM SCHEERS, MILAN TENBÜLT, ERIK VAN DE WARDT, LEVI WEIDMANN, MARK VAN DEN BOGAARD</p
     </div>
   </div>
 </div>
+
+<%# Additional camera: Robin Ruitenberg
+FPV drone: Ralph Hogenbirk
+Photography: Syo van Vliet, Bart de Jong
+Sound mix and design: Jason DeGraw
+Title design: Nicky van der Veen
+Grading: @i_am_nikolaii
+Music: Jespfur, MOOON
+
+Ramp design: Pim van den Bos
+Ramp builders: Max Cleuren, Frits van der Linden, Dennis 'Paap' Janssen, Steven Görtemöller
+
+Special thanks: Tom's family, Arjan Ellens, Paul de Jong, Sem Kok, Pim Scheers, Milan Tenbült, Erik van de Wardt, Levi Weidmann, Mark van den Bogaard %>
