--- a/app/views/home/isabel.html.erb
+++ b/app/views/home/isabel.html.erb
@@ -4,20 +4,11 @@
   </div>
   <div class="container">
     <div class="credits">
-      <p>CLIENT: GROLSCH</p>
-      <p>AGENCY: DAWN</p>
-      <p>PRODUCTION COMPANY: VIGICS</p>
+      <p>ARTIST: DZLAN VAN DAM</p>
       <br>
       <p>DIRECTOR: SYBREN PLANTING</p>
-      <p>EXECUTIVE PRODUCER: DWIGHT GROOT</p>
-      <p>PRODUCER: ROCHÉ WONG</p>
-      <p>DIRECTOR OF PHOTOGRAPHY: ZEEGER VERSCHUREN</p>
-      <p>CPT LINE PRODUCTION: HACIENDA FILMS</p>
-      <p>CPT LINE PRODUCER: JESSICA SCHIPPERS</p>
-      <p>POST PRODUCTION: THE COMPOUND</p>
-      <p>EDITOR: JOSHUA MENCO</p>
-      <p>MUSIC & SOUNDDESIGN: SOUNDSRIGHT</p>
-      <p>GRADING: RUBEN LABREE</p>
+      <p>CAMERA OPERATOR PRODUCER: SYBREN PLANTING</p>
+      <p>POST PRODUCTION: SYBREN PLANTING</p>
     </div>
   </div>
 </div>
