--- a/app/assets/stylesheets/components/_embed.scss
+++ b/app/assets/stylesheets/components/_embed.scss
@@ -7,9 +7,22 @@
 
 .tiles {
   display: flex;
+  position: relative;
   align-items: center;
   justify-content: center;
   padding: 0.1em;
+}
+
+.tile_title {
+  font-family: 'Smooch Sans', sans-serif;
+  font-style: bold;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 2.5rem;
 }
 
 .imgTile {
