title to uppercase

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,35 +3,35 @@
   <div class="tiles">
     <%= link_to tom_path do %>
       <%= image_tag "tomvb.png", class: "imgTile", title: "Tom Van Den Bogaard - Redemption" %>
-      <h6 class="tile_title">Tom Van Den Bogaard - Redemption</h6>
+      <h6 class="tile_title">TOM VAN DEN BOGAARD - REDEMPTION</h6>
     <% end %>
   </div>
 
   <div class="tiles">
     <%= link_to teamtrobbies_path do %>
       <%= image_tag "team-trobbies.png", class: "imgTile", title: "team-trobbies" %>
-      <h6 class="tile_title">Team Trobbies</h6>
+      <h6 class="tile_title">TEAM TROBBIES</h6>
     <% end %>
   </div>
 
   <div class="tiles">
     <%= link_to madnes_path do %>
       <%= image_tag "madnes.png", class: "imgTile", title: "madnes" %>
-      <h6 class="tile_title">Madnes - #GENIETEN</h6>
+      <h6 class="tile_title">MADNES - #GENIETEN</h6>
     <% end %>
   </div>
 
   <div class="tiles">
     <%= link_to glennc_path do %>
       <%= image_tag "glennc.png", class: "imgTile", title: "Glenn Coldenhoff - Giving Back" %>
-      <h6 class="tile_title">Glenn Coldenhoff - Giving Back</h6>
+      <h6 class="tile_title">GLENN COLDENHOFF - GIVING BACK</h6>
     <% end %>
   </div>
 
   <div class="tiles">
     <%= link_to isabel_path do %>
       <%= image_tag "isabel.png", class: "imgTile", title: "Dylan Van Dam - Isabel (Music Video)" %>
-      <h6 class="tile_title">Isabel</h6>
+      <h6 class="tile_title">ISABEL</h6>
     <% end %>
   </div>
 
@@ -45,35 +45,35 @@
   <div class="tiles">
     <%= link_to bok2019_path do %>
       <%= image_tag "bok2019.png", class: "imgTile", title: "Onwies Knallen BMX - BOK 2019" %>
-      <h6 class="tile_title">Onwies Knallen BMX - BOK 2019</h6>
+      <h6 class="tile_title">ONWIES KNALLEN BMX - BOK 2019</h6>
     <% end %>
   </div>
 
   <div class="tiles">
     <%= link_to tomvdbmonsterenergy_path do %>
       <%= image_tag "tomvdbmonsterenergy.png", class: "imgTile", title: "Tom Van Den Bogaard Monster Energy" %>
-      <h6 class="tile_title">Tom Van Den Bogaard - Monster Energy</h6>
+      <h6 class="tile_title">TOM VAN DEN BOGAARD - MONSTER ENERGY</h6>
     <% end %>
   </div>
 
   <div class="tiles">
     <%= link_to vinkkunststoffen_path do %>
       <%= image_tag "vinkkunststoffen.png", class: "imgTile", title: "Vink Kunstoffen" %>
-      <h6 class="tile_title">Vink Kunstoffen</h6>
+      <h6 class="tile_title">VINK KUNSTOFFEN</h6>
     <% end %>
   </div>
 
   <div class="tiles">
     <%= link_to nalu_path do %>
       <%= image_tag "nalu.png", class: "imgTile", title: "Nalu - Lost Frequenties BTS" %>
-      <h6 class="tile_title">Nalu - Lost Frequenties BTS</h6>
+      <h6 class="tile_title">NALU - LOST FREQUENTIES BTS</h6>
     <% end %>
   </div>
 
   <div class="tiles">
     <%= link_to pumpfactory_path do %>
       <%= image_tag "pumpfactory.png", class: "imgTile", title: "pump-factory" %>
-      <h6 class="tile_title">The Pump Factory</h6>
+      <h6 class="tile_title">THE PUMP FACTORY</h6>
     <% end %>
   </div>
 
