--- a/app/assets/stylesheets/components/_embed.scss
+++ b/app/assets/stylesheets/components/_embed.scss
@@ -1,3 +1,4 @@
+// Single Video Page Section
 .embedVid {
   display: flex;
   align-items: center;
@@ -5,6 +6,9 @@
   padding: 0.1em;
 }
 
+// Index / home page Section
+
+// tiles/videe-image links
 .tiles {
   display: flex;
   position: relative;
