--- a/app/views/home/isabel.html.erb
+++ b/app/views/home/isabel.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="container">
     <div class="credits">
-      <p>ARTIST: DZLAN VAN DAM</p>
+      <p>ARTIST: DYLAN VAN DAM</p>
       <br>
       <p>DIRECTOR: SYBREN PLANTING</p>
       <p>CAMERA OPERATOR PRODUCER: SYBREN PLANTING</p>
