initial still mockup - same img

--- a/app/assets/stylesheets/components/_embed.scss
+++ b/app/assets/stylesheets/components/_embed.scss
@@ -6,6 +6,17 @@
   padding: 0.1em;
 }
 
+// add stills + to resize
+.stills {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+// .still {
+
+// }
+
 // Index / home page Section
 
 // tiles/video links
