--- a/app/views/home/tomvdb-redemption.html.erb
+++ b/app/views/home/tomvdb-redemption.html.erb
@@ -1,6 +1,6 @@
 <div class="bodyDiv">
   <div class="embedVid">
-  <iframe src="https://player.vimeo.com/video/684403360?h=cd6aa00625&byline=0&portrait=0" width="1162" height="648" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/684403360?h=cd6aa00625&byline=0&portrait=0" width="1162" height="648" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div class="container">
     <div class="credits">
@@ -23,20 +23,14 @@
       <p>RAMP DESIGN: PIM VAN DEN BOS</p>
       <p>RAMP BUILDERS: MAX CLEUREN, FRITS VAN DER LINDEN, DENNIS 'PAAP' JANSSEN, STEVEN GÖRTEMÖLLER</p>
       <br>
-      <p>SPECIAL THANKS: TOMS FAMILY, ARJAN ELLENS, PAUL DE JONG, SEM KOK, PIM SCHEERS, MILAN TENBÜLT, ERIK VAN DE WARDT, LEVI WEIDMANN, MARK VAN DEN BOGAARD</p
+      <p>SPECIAL THANKS: TOMS FAMILY, ARJAN ELLENS, PAUL DE JONG, SEM KOK, PIM SCHEERS, MILAN TENBÜLT, ERIK VAN DE WARDT, LEVI WEIDMANN, MARK VAN DEN BOGAARD</p>
+    </div>
+    <%# INSERT STILLS %>
+    <div class="stills">
+      <div class="still">
+        <%= image_tag "tomvb.png", class: "imgTile", title: "TomVanDenBogaard" %>
+        <%= image_tag "tomvb.png", class: "imgTile", title: "TomVanDenBogaard" %>
+      </div>
     </div>
   </div>
 </div>
-
-<%# Additional camera: Robin Ruitenberg
-FPV drone: Ralph Hogenbirk
-Photography: Syo van Vliet, Bart de Jong
-Sound mix and design: Jason DeGraw
-Title design: Nicky van der Veen
-Grading: @i_am_nikolaii
-Music: Jespfur, MOOON
-
-Ramp design: Pim van den Bos
-Ramp builders: Max Cleuren, Frits van der Linden, Dennis 'Paap' Janssen, Steven Görtemöller
-
-Special thanks: Tom's family, Arjan Ellens, Paul de Jong, Sem Kok, Pim Scheers, Milan Tenbült, Erik van de Wardt, Levi Weidmann, Mark van den Bogaard %>
