--- a/app/views/home/tomvdb-redemption.html.erb
+++ b/app/views/home/tomvdb-redemption.html.erb
@@ -28,8 +28,8 @@
     <%# INSERT STILLS %>
     <div class="stills">
       <div class="still">
-        <%= image_tag "tomvb.png", class: "imgTile", title: "TomVanDenBogaard" %>
-        <%= image_tag "tomvb.png", class: "imgTile", title: "TomVanDenBogaard" %>
+        <%= image_tag "tomvb-still1.png", class: "still", title: "TomVanDenBogaard" %>
+        <%= image_tag "tomvb-still2.png", class: "still", title: "TomVanDenBogaard" %>
       </div>
     </div>
   </div>
