--- a/app/views/home/team-trobbies.html.erb
+++ b/app/views/home/team-trobbies.html.erb
@@ -9,5 +9,12 @@
       <p>DOP: STEIJN LEIJZER</p>
       <p>POST PRODUCTION: SYBREN PLANTING</p>
     </div>
+    <div class="stills">
+      <div class="still">
+        <%= image_tag "trobbies-still.png", class: "still", title: "team-trobbies" %>
+        <%= image_tag "trobbies-still2.png", class: "still", title: "team-trobbies-kevin" %>
+        <%= image_tag "trobbies-still3.png", class: "still", title: "trobbies" %>
+      </div>
+    </div>
   </div>
 </div>
