--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,11 +17,11 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="body">
       <%= render 'layouts/shared/navbar' %>
 
       <div class="bodyDiv">
-      <%= yield %>
+        <%= yield %>
       </div>
 
       <%= render 'layouts/shared/footer' %>
