--- a/app/views/layouts/shared/_footer.html.erb
+++ b/app/views/layouts/shared/_footer.html.erb
@@ -1,5 +1,5 @@
-  <div class="container">
-    <footer class="white-section" id="footer">
+  <%# <div class="container"> %>
+    <footer id="footer">
       <hr>
 
         <a class="social-icon" href="https://www.instagram.com/sybrenplanting/?hl=en"><i class="social-icon fa fa-instagram fa-5" aria-hidden="true"></i></a>
@@ -8,4 +8,4 @@
         <p>© 2022 SybrenPlanting </p>
 
     </footer>
-</div>
+<%# </div> %>
