footer broken mobile size - pre fix

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -23,73 +23,9 @@ hr {
   }
 }
 
-@media (max-width: 700px) {
-  #footer {
-    margin-top: 30em;
-  }
-}
-
-// media queries (resizing)
-// All devices up to a width of 575 px = Most mobile Phones
-// @media (max-width: 575.98px) {
+// footer push down mobile size
+// @media (max-width: 700px) {
 //   #footer {
-//     padding-top: 0.8em;
-//     padding-bottom: 0.5rem;
-//   }
-//   hr {
-//     padding-right: 0;
-//     margin-right: 0;
-//   }
-//   .social-icon a {
-//     margin: 0.25rem;
-//     padding: 0.5em;
-//   }
-// }
-
-// // small phone screen
-// @media (max-width: 400px) {
-//   #footer {
-//     padding-top: 0.8em;
-//     padding-bottom: 0.5rem;
-//   }
-//   hr {
-//     padding-right: 0;
-//     margin-right: 0;
-//   }
-//   .social-icon a {
-//     margin: 0.25rem;
-//     padding: 0.5em;
-//   }
-// }
-
-// // Everything below normal 11-12inch laptop (tablet, big phone etc)
-// @media (min-width: 700px) {
-//   #footer {
-//     padding-top: 0.8em;
-//     padding-bottom: 0.5rem;
-//   }
-//   hr {
-//     padding-right: 0;
-//     margin-right: 0;
-//   }
-//   .social-icon a {
-//     margin: 0.25rem;
-//     padding: 0.5em;
-//   }
-// }
-
-// // screns smaller than 1300 px
-// @media (max-width: 1300px) {
-//   #footer {
-//     padding-top: 0.8em;
-//     padding-bottom: 0.5rem;
-//   }
-//   hr {
-//     padding-right: 0;
-//     margin-right: 0;
-//   }
-//   .social-icon a {
-//     margin: 0.25rem;
-//     padding: 0.5em;
+//     margin-top: 30em;
 //   }
 // }
