footer-in-service

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -5,6 +5,7 @@
   font-family: 'Smooch Sans', sans-serif;
   font-weight: 100;
   font-size: 1.1rem;
+  bottom:0;
 }
 
 hr {
@@ -26,6 +27,6 @@ hr {
 // footer push down mobile size
 // @media (max-width: 700px) {
 //   #footer {
-//     margin-top: 30em;
+//     margin-top: 25em;
 //   }
 // }
