--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,10 +5,10 @@
 
 // Body Styling
 
-.bodyDiv {
-  width: 100%;
-  height: auto;
-}
+// .bodyDiv {
+//   width: 100%;
+//   height: auto;
+// }
 
 // .body {
 //   display: flex;
