--- a/app/views/home/tomvdb-redemption.html.erb
+++ b/app/views/home/tomvdb-redemption.html.erb
@@ -1,4 +1,4 @@
-<div class="bodyDiv">
+<div class="container">
   <div class="embedVid">
     <iframe src="https://player.vimeo.com/video/684403360?h=cd6aa00625&byline=0&portrait=0" width="1162" height="648" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
   </div>
