--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,7 +1,6 @@
 #footer {
   text-align: center;
   padding: 3em;
-  margin-top: 1em;
   font-family: 'Smooch Sans', sans-serif;
   font-weight: 100;
   font-size: 1.1rem;
@@ -27,6 +26,6 @@ hr {
 // footer push down mobile size
 // @media (max-width: 700px) {
 //   #footer {
-//     margin-top: 25em;
+//     font-size: 1em;
 //   }
 // }
