--- a/app/views/home/team-trobbies.html.erb
+++ b/app/views/home/team-trobbies.html.erb
@@ -11,9 +11,16 @@
     </div>
     <div class="stills">
       <div class="still">
-        <%= image_tag "trobbies-still.png", class: "still", title: "team-trobbies" %>
-        <%= image_tag "trobbies-still2.png", class: "still", title: "team-trobbies-kevin" %>
-        <%= image_tag "trobbies-still3.png", class: "still", title: "trobbies" %>
+          <%= image_tag "trobbies-still.png", class: "still", title: "team-trobbies" %>
+       </div>
+
+        <div class="still">
+          <%= image_tag "trobbies-still2.png", class: "still", title: "team-trobbies-kevin" %>
+        </div>
+
+        <div class="still">
+          <%= image_tag "trobbies-still3.png", class: "still", title: "trobbies" %>
+        </div>
       </div>
     </div>
   </div>
