--- a/app/views/home/glennc-giving-back.html.erb
+++ b/app/views/home/glennc-giving-back.html.erb
@@ -14,5 +14,29 @@
       <p>SOUND MIX: HACIENDA FILMS</p>
       <p>GRADING: GIOVANNI DE DEUGD</p>
     </div>
+    <div class="stills">
+      <div class="still">
+          <%= image_tag "glennc-still.png", class: "still", title: "glennc" %>
+       </div>
+
+        <div class="still">
+          <%= image_tag "glennc-still2.png", class: "still", title: "glennc2" %>
+        </div>
+
+        <div class="still">
+          <%= image_tag "glennc-still3.png", class: "still", title: "glennc3" %>
+        </div>
+
+        <div class="still">
+          <%= image_tag "glennc-still4.png", class: "still", title: "glennc4" %>
+        </div>
+
+        <div class="still">
+          <%= image_tag "glennc-still5.png", class: "still", title: "glennc5" %>
+        </div>
+        <div class="still">
+          <%= image_tag "glennc-still6.png", class: "still", title: "glennc6" %>
+        </div>
+      </div>
   </div>
 </div>
