--- a/app/views/home/isabel.html.erb
+++ b/app/views/home/isabel.html.erb
@@ -10,5 +10,14 @@
       <p>CAMERA OPERATOR PRODUCER: SYBREN PLANTING</p>
       <p>POST PRODUCTION: SYBREN PLANTING</p>
     </div>
+    <div class="stills">
+      <div class="still">
+          <%= image_tag "isabel-still.png", class: "still", title: "isabel" %>
+       </div>
+
+        <div class="still">
+          <%= image_tag "isabel-still2.png", class: "still", title: "isabel2" %>
+        </div>
+    </div>
   </div>
 </div>
