--- a/app/views/home/madnes.html.erb
+++ b/app/views/home/madnes.html.erb
@@ -10,5 +10,27 @@
         <p>CAMERA OPERATOR: SYBREN PLANTING</p>
         <p>POST PRODUCTION: SYBREN PLANTING</p>
       </div>
+      <div class="stills">
+      <div class="still">
+          <%= image_tag "madnes-still.png", class: "still", title: "madnes" %>
+       </div>
+
+        <div class="still">
+          <%= image_tag "madnes-still2.png", class: "still", title: "madnes2" %>
+        </div>
+
+        <div class="still">
+          <%= image_tag "madnes-still3.png", class: "still", title: "madnes3" %>
+        </div>
+
+        <div class="still">
+          <%= image_tag "madnes-still4.png", class: "still", title: "madnes4" %>
+        </div>
+
+        <div class="still">
+          <%= image_tag "madnes-still5.png", class: "still", title: "madnes5" %>
+        </div>
+      </div>
+    </div>
     </div>
 </div>
