--- a/app/views/home/vink-kunststoffen.html.erb
+++ b/app/views/home/vink-kunststoffen.html.erb
@@ -5,11 +5,26 @@
   <div class="container">
     <div class="credits">
       <p>CLIENT: VINK KUNSTSTOFFEN</p>
-      <p>AGENCY: CLOTHESINC</p>
-      <p>PRODUCTION COMPANY: VIGICS</p>
       <br>
-      <p>DIRECTOR: SYBREN PLANTING</p>
-      <p>EXECUTIVE PRODUCER: DWIGHT GROOT</p>
+      <p>CAMERA OPERATOR: SYBREN PLANTING</p>
+      <p>POST PRODUCTION: SYBREN PLANTING</p>
     </div>
+    <div class="stills">
+      <div class="still">
+          <%= image_tag "vink-still.png", class: "still", title: "vink" %>
+       </div>
+
+        <div class="still">
+          <%= image_tag "vink-still2.png", class: "still", title: "vink2" %>
+        </div>
+
+        <div class="still">
+          <%= image_tag "vink-still3.png", class: "still", title: "vink3" %>
+        </div>
+
+        <div class="still">
+          <%= image_tag "vink-still4.png", class: "still", title: "vink4" %>
+        </div>
+      </div>
   </div>
 </div>
