last draft stills added

--- a/app/views/home/bok-2019.html.erb
+++ b/app/views/home/bok-2019.html.erb
@@ -7,7 +7,15 @@
       <p>CAMERA OPERATORS: SYBREN PLANTING, STEIJN LEIJZER</p>
       <br>
       <p>POST PRODUCTION: SYBREN PLANTING</p>
+    </div>
+    <div class="stills">
+      <div class="still">
+          <%= image_tag "bok2019-still.png", class: "still", title: "bok2019" %>
+       </div>
 
+        <div class="still">
+          <%= image_tag "bok2019-still2.png", class: "still", title: "bok2019-2" %>
+        </div>
     </div>
   </div>
 </div>
