--- a/app/views/home/nalu-lost-frequenties-bts.html.erb
+++ b/app/views/home/nalu-lost-frequenties-bts.html.erb
@@ -10,5 +10,16 @@
       <p>CAMERA OPERATOR: SYBREN PLANTING</p>
       <p>POST PRODUCTION: SYBREN PLANTING</p>
     </div>
+    <div class="stills">
+      <div class="still">
+        <%= image_tag "nalu-still.png", class: "still", title: "nalu" %>
+      </div>
+      <div class="still">
+        <%= image_tag "nalu-still2.png", class: "still", title: "nalu-2" %>
+      </div>
+      <div class="still">
+        <%= image_tag "nalu-still3.png", class: "still", title: "nalu-3" %>
+      </div>
+    </div>
   </div>
 </div>
