--- a/app/views/home/opdruq.html.erb
+++ b/app/views/home/opdruq.html.erb
@@ -10,5 +10,18 @@
       <p>CAMERA OPERATOR: SYBREN PLANTING</p>
       <p>POST PRODUCTION: SYBREN PLANTING</p>
     </div>
+    <div class="stills">
+      <div class="still">
+          <%= image_tag "opdruq-still.png", class: "still", title: "opdruq" %>
+       </div>
+
+        <div class="still">
+          <%= image_tag "opdruq-still2.png", class: "still", title: "opdruq-2" %>
+        </div>
+
+        <div class="still">
+          <%= image_tag "opdruq-still3.png", class: "still", title: "opdruq-3" %>
+        </div>
+    </div>
   </div>
 </div>
