--- a/app/views/home/pump-factory.html.erb
+++ b/app/views/home/pump-factory.html.erb
@@ -9,5 +9,16 @@
       <p>CAMERA OPERATOR: SYBREN PLANTING</p>
       <p>POST PRODUCTION: SYBREN PLANTING</p>
     </div>
+    <div class="stills">
+      <div class="still">
+        <%= image_tag "pumpf-still.png", class: "still", title: "pumpf" %>
+      </div>
+      <div class="still">
+        <%= image_tag "pumpf-still2.png", class: "still", title: "pumpf-2" %>
+      </div>
+      <div class="still">
+        <%= image_tag "pumpf-still3.png", class: "still", title: "pumpf-3" %>
+      </div>
+    </div>
   </div>
 </div>
