--- a/app/views/home/tomvdb-monster-energy.html.erb
+++ b/app/views/home/tomvdb-monster-energy.html.erb
@@ -11,5 +11,14 @@
       <p>POST PRODUCTION: STEIJN LEIJZER</p>
       <p>TALENT: TOM VAN DEN BOGAARD</p>
     </div>
+    <div class="stills">
+      <div class="still">
+          <%= image_tag "tomvbmonster-still.png", class: "still", title: "tomvbmonster" %>
+       </div>
+
+        <div class="still">
+          <%= image_tag "tomvbmonster-still2.png", class: "still", title: "tomvbmonster-2" %>
+        </div>
+    </div>
   </div>
 </div>
