Test remove one line vdb redemption

--- a/app/views/home/tomvdb-redemption.html.erb
+++ b/app/views/home/tomvdb-redemption.html.erb
@@ -6,7 +6,7 @@
     <div class="credits">
       <p>CLIENT: MONSTER ENERGY, MONSTER ENERGY BENELUX: ROY VAN KEMPEN, ELIN BLANKE</p>
       <p>TALENT: TOM VAN DEN BOGAARD</p>
-      <p>PRODUCTION COMPANY: SYBREN PLANTING</p>
+      <%# <p>PRODUCTION COMPANY: SYBREN PLANTING</p> %>
       <br>
       <p>DIRECTOR: SYBREN PLANTING, STEIJN LEIJZER</p>
       <p>CAMERA: SYBREN PLANTING, STEIJN LEIJZER</p>
