--- a/app/assets/stylesheets/components/_embed.scss
+++ b/app/assets/stylesheets/components/_embed.scss
@@ -33,18 +33,18 @@
 }
 
 .tile_title {
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(3px);
   border-radius: 10px;
-  padding: 0.2em;
+  // padding: 0.2em;
   font-family: 'Smooch Sans', sans-serif;
-  font-style: bold;
+  font-weight: 700;
   text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
-  font-size: 2.5rem;
+  font-size: 3rem;
 }
 
 .imgTile {
