--- a/app/views/home/isabel.html.erb
+++ b/app/views/home/isabel.html.erb
@@ -7,7 +7,7 @@
       <p>ARTIST: DYLAN VAN DAM</p>
       <br>
       <p>DIRECTOR: SYBREN PLANTING</p>
-      <p>CAMERA OPERATOR PRODUCER: SYBREN PLANTING</p>
+      <p>CAMERA OPERATOR: SYBREN PLANTING</p>
       <p>POST PRODUCTION: SYBREN PLANTING</p>
     </div>
     <div class="stills">
