--- a/app/views/home/nalu-lost-frequenties-bts.html.erb
+++ b/app/views/home/nalu-lost-frequenties-bts.html.erb
@@ -6,6 +6,7 @@
     <div class="credits">
       <p>CLIENT: NALU ENERGY</p>
       <p>NALU ENERGY: ROY VAN KEMPEN; ELINE BLANKE</p>
+      <p>ARTIST: LOST FREQUENCIES</p>
       <br>
       <p>CAMERA OPERATOR: SYBREN PLANTING</p>
       <p>POST PRODUCTION: SYBREN PLANTING</p>
