--- a/app/views/home/tomvdb-monster-energy.html.erb
+++ b/app/views/home/tomvdb-monster-energy.html.erb
@@ -4,12 +4,13 @@
   </div>
   <div class="container">
     <div class="credits">
+      <p>CLIENT: MONSTER ENERGY</p>
+      <p>TALENT: TOM VAN DEN BOGAARD</p>
+      <br>
       <p>DIRECTOR: STEIJN LEIJZER</p>
       <p>CAMERA OPERATORS: STEIJN LEIJZER, SYBREN PLANTING</p>
-      <br>
       <p>GAFFER: WIEGERT DE VRIES</p>
       <p>POST PRODUCTION: STEIJN LEIJZER</p>
-      <p>TALENT: TOM VAN DEN BOGAARD</p>
     </div>
     <div class="stills">
       <div class="still">
