--- a/app/views/home/tomvdb-redemption.html.erb
+++ b/app/views/home/tomvdb-redemption.html.erb
@@ -4,7 +4,8 @@
   </div>
   <div class="container">
     <div class="credits">
-      <p>CLIENT: MONSTER ENERGY, MONSTER ENERGY BENELUX: ROY VAN KEMPEN, ELIN BLANKE</p>
+      <p>CLIENT: MONSTER ENERGY</p>
+      <p>MONSTER ENERGY BENELUX: ROY VAN KEMPEN, ELINE BLANKE</p>
       <p>TALENT: TOM VAN DEN BOGAARD</p>
       <%# <p>PRODUCTION COMPANY: SYBREN PLANTING</p> %>
       <br>
