--- a/app/assets/stylesheets/components/_embed.scss
+++ b/app/assets/stylesheets/components/_embed.scss
@@ -33,8 +33,8 @@
 }
 
 .tile_title {
-  backdrop-filter: blur(3px);
-  border-radius: 10px;
+  backdrop-filter: blur(2px);
+  border-radius: 0.1em;
   padding-left: 0.1em;
   padding-right: 0.1em;
   font-family: 'Smooch Sans', sans-serif;
@@ -101,6 +101,7 @@
   }
   .tile_title {
     font-size: 1em;
+    backdrop-filter: blur(3px);
   }
   .still {
     width: 20.875rem;
